<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
        <item
            android:title="@string/inbox"
            android:icon="@drawable/inbox"
            android:id="@+id/inbox_id"
            />
    <item
        android:id="@+id/starred_id"
        android:title="@string/starred"
        android:icon="@drawable/starred"/>

    <item
        android:title="@string/sent_mail"
        android:id="@+id/sent_id"
        android:icon="@drawable/sent"/>
    <item
        android:id="@+id/draft_id"
        android:title="@string/drafts"
        android:icon="@drawable/draft"/>

    </group>
<item android:title="@string/subheader">

    <menu>

        <item
            android:id="@+id/all_mail"
            android:title="@string/all_mail"
            android:icon="@drawable/allmail"/>
        <item
            android:title="@string/trash"
            android:id="@+id/trash_id"
            android:icon="@drawable/delete"/>
        <item
            android:id="@+id/spam"
            android:icon="@drawable/spam"
            android:title="@string/spam"/>


    </menu>





</item>



</menu>